# code-monkey

./: Cargo.toml  README.md
docs/design/: code-monkey-prd.md  code-monkey-tasks.md
examples/: applescript-actions.cm  demo.cm
src/: grouper.rs  lib.rs  main.rs
src/agent/: applescript.rs  mod.rs  typewriter.rs
src/client/: mod.rs
src/parser/: front_matter.rs  lexer.rs  mod.rs  types.rs
src/protocol/: codec.rs  messages.rs
src/tui/: mod.rs
tests/: cli.rs
